// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component WITH props renders the UI as expected when passed props 1`] = `
<section
  className="card"
>
  <img
    alt="profile pic"
    src="https://source.unsplash.com/mx0DEnfYxic/300x300"
  />
  <div
    className="card-content"
  >
    <p>
      My name: 
      Fuzzy
    </p>
    <p>
      My age: 
      5
    </p>
  </div>
</section>
`;

exports[`Card component without props renders the UI as expected when passed no props 1`] = `
<section
  className="card"
>
  <img
    alt="profile pic"
  />
  <div
    className="card-content"
  >
    <p>
      My name: 
    </p>
    <p>
      My age: 
    </p>
  </div>
</section>
`;
